--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Sun Oct 16 13:06:58 BOT 2011
+#Sun Oct 30 23:25:56 BOT 2011
 eclipse.preferences.version=1
+encoding//src/modules/connector/__init__.py=utf-8
 encoding//src/modules/prepaid/__init__.py=utf-8
 encoding//src/modules/sms/__init__.py=utf-8
